; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/netdevsim/extr_dev.c_nsim_dev_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/netdevsim/extr_dev.c_nsim_dev_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DRV_NAME = common dso_local global i32 0, align 4
@nsim_dev_ddir = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nsim_dev_init() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @DRV_NAME, align 4
  %3 = call i32 @debugfs_create_dir(i32 %2, i32* null)
  store i32 %3, i32* @nsim_dev_ddir, align 4
  %4 = load i32, i32* @nsim_dev_ddir, align 4
  %5 = call i64 @IS_ERR_OR_NULL(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load i32, i32* @ENOMEM, align 4
  %9 = sub nsw i32 0, %8
  store i32 %9, i32* %1, align 4
  br label %11

10:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  br label %11

11:                                               ; preds = %10, %7
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @debugfs_create_dir(i32, i32*) #1

declare dso_local i64 @IS_ERR_OR_NULL(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
